# cloudbridge

./: .gitignore  .hgignore  CMakeLists.txt  LICENSE  Makefile  README  buffer.cpp  buffer.hpp  buffered_connection.cpp  buffered_connection.hpp  chat_handler.cpp  chat_handler.hpp  cloudbridge.cpp  connection_finder.cpp  connection_finder.hpp  evx.hpp  listen_handler.cpp  listen_handler.hpp  run  util.cpp  util.hpp
cloudbridge-xc.xcodeproj/: graham.mode1v3  graham.pbxuser  project.pbxproj
cloudbridge-xc/cloudbridge-xc.xcodeproj/: graham.mode1v3  graham.pbxuser  project.pbxproj
cmake/modules/: FindEv.cmake  FindTomCrypt.cmake
doc/: idea.txt  protocol.txt  public.txt
evx/: CMakeLists.txt  buffer.cpp  buffered_connection.cpp  buffered_connection.hpp  evx.hpp
evx/src/: buffer.cpp  buffered_connection.cpp
include/: chat_handler.hpp  config.hpp.in  connection_finder.hpp  connection_pool.hpp  listen_handler.hpp  simple_stats_driver.hpp  state_stats_driver.hpp
ruby/: cloudbridge.gemspec  test-mongrel.rb  test.rb
ruby/lib/: cloud_mongrel.rb  cloudmachine.rb  cloudserver.rb
ruby/test/: cloud_mongrel.rb  test_cloud_mongrel.rb.orig  test_cloudmachine.rb  test_cloudserver.rb
rubygem/cloudbridge/: cloudbridge-0.9.5.gem  cloudbridge-0.9.6.gem  cloudbridge.gemspec
src/: chat_handler.cpp  chat_handler.hpp  cloudbridge.cpp  connection_finder.cpp  connection_finder.hpp  connection_pool.cpp  connection_pool.hpp  listen_handler.cpp  listen_handler.hpp  simple_stats_driver.cpp  simple_stats_driver.hpp  state_stats_driver.cpp  state_stats_driver.hpp
(+12 files in other folders)
